# Lock

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  README.md  SECURITY.md  com.konstantintutsch.Lock.Devel.yaml  meson.build  meson.options
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug_report.yaml  2-feature_request.yaml  config.yml
.github/workflows/: build.yaml
build-aux/: com.konstantintutsch.Lock.Devel.yaml  com.konstantintutsch.Lock.yaml
data/: com.konstantintutsch.Lock.desktop.in.in  com.konstantintutsch.Lock.gresource.xml.in  com.konstantintutsch.Lock.metainfo.xml.in.in  meson.build  style.css
data/icons/: meson.build
data/ui/: entrydialog.blp  keydialog.blp  keyrow.blp  meson.build  window.blp
po/: LINGUAS  POTFILES  bg.po  com.konstantintutsch.Lock.pot  cs.po  de.po  oc.po  zh_CN.po
src/: application.c  application.h  config.h.in  cryptography.c  cryptography.h  entrydialog.c  entrydialog.h  keydialog.c  keydialog.h  keyrow.c  keyrow.h  main.c  meson.build  threading.c  threading.h  window.c  window.h
